fix: update button container styles for better alignment and responsiveness; correct blue color variable (#35)

--- a/src/gui/src/stylesheets/main.css
+++ b/src/gui/src/stylesheets/main.css
@@ -19,3 +19,8 @@ body {
     white-space: nowrap;
     border: 0;
 }
+
+a:has(.button) {
+    display: inline-flex;
+    text-decoration: none;
+}
